Added Done and Delete icons

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="w-full bg-blue-400 h-[70px] flex justify-center items-center">
     <div>
         <span>Todo List</span>
     </div>
