Implement Tailwindcss login and generate auth service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navbar></app-navbar>
-<app-task-form></app-task-form>
+<router-outlet></router-outlet>
+
+<!-- <app-navbar></app-navbar>
+<app-task-form></app-task-form> -->
