--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -19,6 +19,7 @@
         >
         <div class="mt-2">
           <input
+          [(ngModel)]="email"
             id="email"
             name="email"
             type="email"
@@ -27,6 +28,7 @@
             class="p-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
         </div>
+        <p class="text-red-500 font-semibold">{{errorMsg}}</p>
       </div>
 
       <div>
@@ -46,6 +48,7 @@
         </div>
         <div class="mt-2">
           <input
+          [(ngModel)]="password"
             id="password"
             name="password"
             type="password"
@@ -54,10 +57,12 @@
             class="p-2 block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"
           />
         </div>
+        <p class="text-red-500 font-semibold">{{errorMsg}}</p>
       </div>
 
       <div>
         <button
+        (click)="login()"
           type="submit"
           class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
         >
